<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="12dp"
    tools:context=".LocationInputActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="8dp">
        <TextView
            android:layout_margin="2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_latitude"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/editTextLatitude"
            android:layout_margin="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_latitude"
            android:inputType="numberDecimal|numberSigned"
            android:minHeight="30dp" />

        <TextView
            android:layout_margin="2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/label_longitude"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/editTextLongitude"
            android:layout_margin="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_longitude"
            android:inputType="numberDecimal|numberSigned"
            android:minHeight="30dp" />

        <Button
            android:id="@+id/buttonApply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="2dp"
            android:text="@string/button_apply" />

<!--        <TextView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="16dp"-->
<!--            android:text="@string/info_share_from_maps"-->
<!--            android:gravity="center_horizontal"-->
<!--            android:textSize="5sp"/>-->

    </LinearLayout>

    <lab.rreedd.oyatsu.JapaneseClockView
        android:id="@+id/japaneseClockView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" /> </LinearLayout>